css/style.css
body {
	font-family: 'Scope One', serif;
	background-color: black;
	/*the green*/
	color: #e9f4e8;
	display: flex;
	flex-direction: column;
	margin: 0;
	max-width: 100vw;
	overflow-x: hidden;
}

.container {
	flex: 1 0 auto;
}

.header > h1 {
	text-align: center;
	margin-top: 35%;
	font-size: 90px;
	letter-spacing: 0.1em
}

.header > h3 {
	font-size: 40px;
	text-align: center;
	letter-spacing: 0.1em;
	padding-bottom: 100px;
	padding-top: 50px;
}

.header {
	height: 60vh;
	overflow: visible;

}

h3 {
	text-align: center;
}

nav {
	position:fixed;
	top:0px;
	width:100%;
	height:50px;
	background-color:black;
	color: #e9f4e8;
	z-index:9999;
	text-align: center;
	font-size: 18px;
	/*display: none;*/
	padding-top: 15px;
}

nav a {
	color: #e9f4e8;
}

nav a:hover, footer a:hover {
	text-decoration: none;
	color: #9A9D9A;
}

/*-------------- about me section styles --------------------*/

.about-me {
	/* height: 675px; */
	height: auto;
	background-color: #e9f4e8;
	color: black;
	padding-bottom: 50px;
	display: flex;
	flex-direction: row;
	justify-content: space-around;
}

.about-me h3, .projects h3, .skills h3, .contact h3{
	font-size: 50px;
	text-align: center;
	letter-spacing: 0.1em;
	margin-top: 15px;
	margin-bottom: 30px;
}

.about-me-content {
	margin-top: 30px;
	margin-left: 30px;
	width: 60%;
	margin-right: 30px;
}

.about-me-content .button-holder {
	/*margin-left: 48px;*/
	width: 150%;
	height: 30px;
	align-items: left;
}

.about-me > img {
	width: 30%;
	margin-top: auto;
	margin-bottom: auto;
/*	margin-right: auto;
	margin-left: auto;*/
	border-radius: 100%;
	margin-right: 30px;
	max-height: 40vh;
}

.btn-dark {
	background-color: black;
	color: #e9f4e8;
	font-family: 'Scope One', serif;
	width: 120px;
	height: 45px;
	font-size: 20px;
	border-radius: 8px;
	letter-spacing: 0.1em;
	margin-right: 20px;
	margin-top: 20px;
}

.hidden-img {
	display: none;
}

/* ------------ photo div section styles ------------------------*/

.photo-div {
	height: 50px;
	width: 100%;
	overflow: auto;
}




/* ----------------- projects section styles ---------------------*/

.projects {
	/*height: 100vh;*/
	background-color: #e9f4e8;
	color: black;
	/*max-height: 1000px;*/
}

.all-projects {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
}

.projects h3, .contact h3, .skills h3 {
	padding-top: 30px;
}

.project-holder {
	width: 45%;
	/*height: 50vh;*/
	display: flex;
	flex-direction: column;
	border: 3px solid black;
	border-radius: 20px;
	margin-left: 2.5%;
	margin-right: 2.5%;
	height: auto;
	margin-bottom: 50px;
}

.highlight {
	width: 75%;
}

#carouselExampleIndicators {
	width: 90%;
	margin-left: 5%;
	margin-top: 15px;
}

.see-more {
	width: 180px;
}

.full-stack {
	width: 100%;
	font-size: 18px;
	line-height: 1.2em;
}

h4 {
	padding-top: 15px;
	text-align: center;
	font-size: 28px;
}


.project-description {
	width: 90%;
	margin-left: 5%;
}

.project-description .button-holder {
	display: flex;
	justify-content: space-around;
	padding-bottom: 15px;
}


/*--------------- skills section ---------------------*/

.skills {
	height: auto;
	background-color: #e9f4e8;
	color: black;
	padding-bottom: 30px;
	/*max-height: 850px;*/
}

.skill-holder {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	margin-left: 30px;
	margin-right: 30px;
}

svg {
	height: 74%;
	width: 100%;
}

.skill {
	width: 10%;
	/* overflow: hidden; */
	text-align: center;
	margin: 20px;
}

span {
	letter-spacing: 0.1em;
	display: block;
	font-size: 1em;
}

/* ---------------- contact -----------------------*/

.contact {
	background-color: #e9f4e8;
	color: black;
	height: auto;
	/*max-height: 1000px;*/
	display: flex;
	padding-top: 30px;
	padding-bottom: 30px;
}

.contact-content {
	width: 55%;
	margin-left: 45px;
	margin-right: 50px;
/*	margin-top: auto;
	margin-bottom: auto;*/
}

.contact p {
	font-size: 20px;
	text-align: center;
}

.contact a {
	color: black;
}

.contact > img {
	width: 30%;
	margin-top: auto;
	margin-bottom: auto;
/*	margin-right: auto;
	margin-left: auto;*/
	border-radius: 100%;
	margin-right: 20px;
	max-height: 40vh;
}

/*----------------- footer -------------------------*/

footer {
	/*margin-top: -50px;*/
	text-align: center;
	padding-top: 15px;
	position: sticky;
	flex-shrink: 0;
}

footer a {
	color:  #e9f4e8;
}

/* --------------- media queries ---------------------*/
@media (max-width: 1370px)  {
	.about-me {
		flex-direction: column-reverse;
		flex-wrap: wrap;
		justify-content: center;
		height: auto;
	}

	.about-me-content {
		width: 90%;
		margin-top: 15px;
		margin-left: auto;
		margin-right: auto;
	}

	.about-me img {
		/*margin-left: auto;
		margin-right: auto;
		width: 45%;
			margin-top: 0;
			margin-bottom: 5px;*/
			margin-left: auto;
			margin-right: auto;
			width: 45%;
			margin-top: 30px;
			margin-bottom: 0px;
			max-height: unset;
	}

	.about-me .button-holder{
		width: 100%;
		height: 100px;
		display: flex;
		justify-content: center;
		flex-wrap: wrap;
	}

	.contact{
		flex-direction: column-reverse;
		/* height: 75vh; */
		/*flex-wrap: wrap;*/
	}

	.contact-content {
		width: 90%;
		margin-left: auto;
		margin-right: auto;
	}

	.contact >img {
		width: 40%;
		margin-left: auto;
		margin-right: auto;
		margin-top: 30px;
		margin-bottom: 0;
		max-height: unset;
	}
}



@media (max-width: 991.98px) {
	.header {
		height: auto;
	}

	.header h1 {
		margin-top: 150px;
	}

	.header h3 {
		padding-bottom: 150px;
	}

	.about-me {
		flex-direction: column-reverse;
		flex-wrap: wrap;
		/* height: 170vh; */
		justify-content: center;
	}

	.all-projects {
		flex-direction: column;
		flex-wrap: wrap;
		justify-content: center;
	/*	margin-left: auto;
		margin-right: auto;*/
	}

	.project-holder {
		width: 90%;
		margin-bottom: 20px;
		margin-left: auto;
		margin-right: auto;
	}

	.skills {
		height: auto;
		/*max-height: 700px;*/
		padding-bottom: 30px;
	}

	.skill-holder {
		margin-left: 30px;
	}

	i {
		font-size: 60px;
		letter-spacing: 0.5em;
		margin-left: auto;
		margin-right: auto;
	}



}

@media (max-width: 575.98px) {
	nav {
		font-size: 15px;
	}

	.header > h1 {
		font-size: 75px;
	}

	.header > h3 {
		font-size: 22px;
		padding-top: 20px;
	}

	.about-me {
		/* height: 212vh; */
	}

	.about-me .button-holder{
		margin-bottom: 20px;
	}

	.about-me > img {
		width: 55%;
	}

	.see-more {
		width: 140px;
	}

	.btn-dark {
		font-size: 13px;
		width: auto;
		padding-left: 15px;
		padding-right: 15px;
	}

	.projects .button-holder{
		margin-left: 18px;
	}

	.skills {
		height: auto;
		max-height: unset;
	}

	.skills h3 {
		margin-bottom: 0;
	}

	.skill-holder {
		margin-left: 30px;
	}

	.contact {
		/* height: 90vh; */
	}

	.contact > img {
		width: 55%;
	}

	.contact-content {
		margin-bottom: 12px;
	}

	footer {
		font-size: 10px;
	}
}

